--- a/style.css
+++ b/style.css
@@ -654,8 +654,8 @@ h2[id] {
 
 @media (max-width: 1150px) {
     .seasonal-header {
-        margin-left: -1rem;
-        width: calc(100% + 2rem);
+        margin-left: calc(-50vw + 50%);
+        width: 100vw;
     }
 }
 
@@ -1141,8 +1141,8 @@ h2[id] {
         min-width: 0;
         width: 100%;
         padding: 40px 10px;
-        overflow: hidden;
-        /* Prevent stickers from pushing out */
+        overflow: visible;
+        /* Allow stickers to breathe */
     }
 
     .piaggio-about-new.collage-item {
@@ -1150,11 +1150,15 @@ h2[id] {
     }
 
     .autumn-sticker {
-        width: 180px;
+        width: 160px;
+        right: -10px;
+        top: -20px;
     }
 
     .angel-sticker {
-        width: 200px;
+        width: 180px;
+        left: -15px;
+        bottom: -30px;
     }
 }
 
@@ -1293,10 +1297,10 @@ h2[id] {
     .hero-section,
     .seasonal-header,
     .impressum-section {
-        width: calc(100% + 2rem) !important;
-        margin-left: -1rem !important;
-        margin-right: -1rem !important;
-        max-width: none !important;
+        width: 100vw !important;
+        margin-left: calc(-50vw + 50%) !important;
+        margin-right: calc(-50vw + 50%) !important;
+        max-width: 100vw !important;
     }
 
     .main-nav {
@@ -1684,8 +1688,8 @@ h2[id] {
 
 @media (max-width: 1150px) {
     .impressum-section {
-        margin-left: -1rem;
-        width: calc(100% + 2rem);
+        margin-left: calc(-50vw + 50%);
+        width: 100vw;
     }
 }
 
